# Img-Foreground-Extraction

./: .gitignore  CMakeLists.txt  README.md
include/: fore_extractor.hpp
src/: fore_extractor.cpp
test/: CMakeLists.txt  fe_tester.cpp
test/util/: util.hpp
